hw.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    sidecar.istio.io/status: injected-version-root@881c9704f303-0.2.9-48ce32e6909d120a8ecee58b6b7a84094da36b7c
  creationTimestamp: null
  labels:
    app: helloworld-service-v1
    version: v1
    visualize: "true"
  name: helloworld-service-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld-service
      serving: "true"
  strategy: {}
  template:
    metadata:
      annotations:
        sidecar.istio.io/status: injected-version-root@881c9704f303-0.2.9-48ce32e6909d120a8ecee58b6b7a84094da36b7c
      creationTimestamp: null
      labels:
        app: helloworld-service
        layer: controller-plane
        serving: "true"
        version: v1
        visualize: "true"
    spec:
      containers:
      - env:
        - name: version
          value: "1.0"
        image: retroryan/helloworld-service-istio:java-1.0
        imagePullPolicy: Always
        name: helloworld-service
        ports:
        - containerPort: 8080
          name: http
        resources: {}
      - args:
        - proxy
        - sidecar
        - -v
        - "2"
        - --configPath
        - /etc/istio/proxy
        - --binaryPath
        - /usr/local/bin/envoy
        - --serviceCluster
        - helloworld-service
        - --drainDuration
        - 45s
        - --parentShutdownDuration
        - 1m0s
        - --discoveryAddress
        - istio-pilot.istio-system:8080
        - --discoveryRefreshDelay
        - 1s
        - --zipkinAddress
        - zipkin.istio-system:9411
        - --connectTimeout
        - 10s
        - --statsdUdpAddress
        - istio-mixer.istio-system:9125
        - --proxyAdminPort
        - "15000"
        image: docker.io/istio/proxy_debug:0.2.9
        imagePullPolicy: IfNotPresent
        name: istio-proxy
        resources: {}
        securityContext:
          privileged: true
          readOnlyRootFilesystem: false
          runAsUser: 1337
        volumeMounts:
        - mountPath: /etc/istio/proxy
          name: istio-envoy
        - mountPath: /etc/certs/
          name: istio-certs
          readOnly: true
      volumes:
      - emptyDir:
          medium: Memory
          sizeLimit: "0"
        name: istio-envoy
      - name: istio-certs
        secret:
          optional: true
          secretName: istio.default
status: {}
---
