tmp.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: helloworld-service-v1
    version: "1.0"
    visualize: "true"
  name: helloworld-service-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld-service
      serving: "true"
  strategy: {}
  template:
    metadata:
      annotations:
        sidecar.istio.io/status: '{"version":"6abbe7c7c508e6dcbd844f45653076c0506b2bb092ac9354362b8dc696129258","initContainers":["istio-init","enable-core-dump"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-certs"]}'
      creationTimestamp: null
      labels:
        app: helloworld-service
        layer: controller-plane
        serving: "true"
        version: "1.0"
        visualize: "true"
    spec:
      containers:
      - env:
        - name: version
          value: "1.0"
        image: retroryan/helloworld-service-istio:java-1.0
        name: helloworld-service
        ports:
        - containerPort: 8080
          name: http
        resources: {}
      - args:
        - proxy
        - sidecar
        - --configPath
        - /etc/istio/proxy
        - --binaryPath
        - /usr/local/bin/envoy
        - --serviceCluster
        - helloworld-service
        - --drainDuration
        - 2s
        - --parentShutdownDuration
        - 3s
        - --discoveryAddress
        - istio-pilot.istio-system:15003
        - --discoveryRefreshDelay
        - 1s
        - --zipkinAddress
        - zipkin.istio-system:9411
        - --connectTimeout
        - 1s
        - --statsdUdpAddress
        - istio-mixer.istio-system:9125
        - --proxyAdminPort
        - "15000"
        - --controlPlaneAuthPolicy
        - NONE
        image: docker.io/istio/proxy:0.5.0
        imagePullPolicy: IfNotPresent
        name: istio-proxy
        resources: {}
        securityContext:
          privileged: false
          readOnlyRootFilesystem: true
          runAsUser: 1337
        volumeMounts:
        - mountPath: /etc/istio/proxy
          name: istio-envoy
        - mountPath: /etc/certs/
          name: istio-certs
          readOnly: true
      volumes:
      - emptyDir:
          medium: Memory
        name: istio-envoy
      - name: istio-certs
        secret:
          optional: true
          secretName: istio.default
status: {}
---
